<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:theme="@style/AppTheme">

            <TextView
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="45sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:gravity="center"
                android:padding="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilepic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/user"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="1dp" />

                <ImageView
                    android:id="@+id/uploadpic"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignRight="@+id/profilepic"
                    android:layout_alignBottom="@+id/profilepic"
                    android:elevation="4dp"
                    android:src="@drawable/uploadpic" />

            </RelativeLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Name"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_errorColor="@color/darkWhite"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/man"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Email"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_errorColor="@color/darkWhite"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@android:drawable/sym_action_email"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Password"
                android:inputType="textPassword"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_errorColor="@color/darkWhite"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/lock"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reenter Password"
                android:inputType="textPassword"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_errorColor="@color/darkWhite"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@drawable/lock"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mobile Number"
                android:inputType="number"
                app:met_baseColor="@color/colorAccent"
                app:met_clearButton="true"
                app:met_errorColor="@color/darkWhite"
                app:met_floatingLabel="highlight"
                app:met_iconLeft="@android:drawable/stat_sys_phone_call"
                app:met_primaryColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/register"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgot_pass"
                    style="@style/fonts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot" />

                <TextView
                    style="@style/fonts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="|"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/login_now"
                    style="@style/fonts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_now" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
